# ModuleCalibration

./: .gitignore  CMakeLists.lxplus  CMakeLists.txt  Crystal_shift.h  FindROOT.cmake  HowToDOIscan.md  ModuleCalibration.cc  ModuleCalibration.cc~  ModuleCalibration.h  barebone.cpp  code.kdev4  coincidence.cpp  configExample.cfg  configTemplate.cfg  correlationMatrix.cpp  deploy.sh  documentation.txt  doiResolutionWithCalibration.cpp  extractConfiguration.cpp  filterForDeepLearning.cpp  manualTCutG.txt  myconfigfile.cfg  newBoardConfig.cfg  new_correlation.cpp  oldBoardConfig.cfg  output_test.root  procedure.txt  produceDatasets.sh  readCalibration.h  shiftTree.cpp  simConfig.cfg  startAnalysis.sh  timeCoincidence.cpp  timeResolution.cpp  time_output_C3.root  time_output_C3.txt  treeToElm2.cpp  untitled.cpp
.kdev4/: code.kdev4
Cluster/: cluster_analysis.cpp  compton_volumes.cpp
DeepLearningDOI/: addFlags.cpp  calcDOIres.cpp  calcDOIres_old.cpp  clusteringEfficiency.cpp  deepLearning.py  filterForDOIscan.cpp  filterForDeepLearning.cpp  filterForDeepLearning_MiniPET.cpp  filterForDeepLearning_MiniPET_old.cpp  filterForDeepLearning_simulation.cpp  testDOIres.cpp  testDOIres.h
Hybrid/: calculate_resolutions.cpp  extract_averages.cpp  extract_averages_B3.cpp  extract_ctr.C  filter_MiniPET.cpp  fix_binning.cpp  v2_calculate_resolutions.cpp
config/: baseConfigModuleCalibration.cfg
doc/: doc.conf
doc/html/: ConfigFile_8h_source.html  Crystal_8h_source.html  Element_8h_source.html  InputFile_8h_source.html  Module_8h_source.html  Mppc_8h_source.html  annotated.html  classConfigFile-members.html  classConfigFile.html  classConfigFile__coll__graph.md5  classCrystal-members.html  classCrystal.html  classCrystal__coll__graph.map  classCrystal__coll__graph.md5  classCrystal__inherit__graph.map  classCrystal__inherit__graph.md5  classElement-members.html  classElement.html  classElement__coll__graph.md5  classElement__inherit__graph.map  classElement__inherit__graph.md5  classInputFile-members.html  classInputFile.html  classInputFile__coll__graph.map  classInputFile__coll__graph.md5  classModule-members.html  classModule.html  classModule__coll__graph.map  classModule__coll__graph.md5  classModule__inherit__graph.map  classModule__inherit__graph.md5  classMppc-members.html  classMppc.html  classMppc__coll__graph.map  classMppc__coll__graph.md5  classMppc__inherit__graph.map  classMppc__inherit__graph.md5  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  (+25 more)
doc/latex/: annotated.tex  classConfigFile.tex  classConfigFile__coll__graph.md5  classCrystal.tex  classCrystal__coll__graph.md5  classCrystal__inherit__graph.md5  classElement.tex  classElement__coll__graph.md5  classElement__inherit__graph.md5  classInputFile.tex  classInputFile__coll__graph.md5  classModule.tex  classModule__coll__graph.md5  classModule__inherit__graph.md5  classMppc.tex  classMppc__coll__graph.md5  classMppc__inherit__graph.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  hierarchy.tex  refman.tex  (+5 more)
include/: ConfigFile.h  Correction.h  Crystal.h  Detector.h  Element.h  Element.h~  InputFile.h  Module.h  Mppc.h  Utilities.h
libraries/: Calibration.h  CrystalStructs.h  Extract.h  Utilities.h
old/: timeResolution.old
parameters/: z_points_jinst_paper.txt
scripts/: runOnCluster.py  runParallel.py  startDOIscanAnalysis.sh
src/: Crystal.cc  Element.cc  InputFile.cc  Module.cc  Mppc.cc
(+34 files in other folders)
